Adjust color of alerts and flashes and add Info icon to alerts. Fix text-wrapping in alert Update student learning link Revert last change

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -53,17 +53,18 @@ strong, .strong {
 }
 
 .flash {
-	background-color: #CBF6FD;
+	background-color: #F9E7BD;
 	padding:10px;
 	width: 100%;
 	text-align: center;
-	margin-bottom: 21px;
+	margin-bottom: 0;
 	color: black;
 	font-family: "Roboto Condensed";
 	.error {
 		color: $red;
 	}
 }
+
 a:not(.dropdown-item) {
 		color: #903;
 	a:active, a:hover, a:visited {
